fixed form alignment

--- a/Sound_Swap/client/src/pages/Login.css
+++ b/Sound_Swap/client/src/pages/Login.css
@@ -10,7 +10,7 @@ p {
 }
 
 form {
-    margin-left: 40%; 
+    margin-left: 41%;
 }
 
 #search {
